# start_studia

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Simple/: Balance.cpp  Balance.h  Calculator.cpp  Calculator.h  Conversion.cpp  Conversion.h  FigureFields.cpp  FigureFields.h  Game.cpp  Game.h  Indicators.cpp  Indicators.h  Interest.cpp  Interest.h  Meteorologist.cpp  Meteorologist.h  QuadraticFunction.cpp  QuadraticFunction.h  Sentence.cpp  Sentence.h
